[package]
name = "loqui_client"
version = "0.0.1"
authors = ["Discord Inc."]
edition = "2018"

[dependencies]
loqui_protocol = { path = "../loqui_protocol" }
loqui_connection = { path = "../loqui_connection" }
failure = "0.1.1"
log = "0.4"
futures = "0.1.25"
futures-timer = "0.1"
tokio = { version = "0.1.21"}
tokio-futures = { git = "https://github.com/discordapp/tokio", rev = "0506fb8018d3090ef1417d3db17f22a951c0c530", features = ["async-await-preview"] }
tokio-codec = "0.1"
bytes = "0.4.9"
bytesize = "1.0.0"
async-trait = "0.1.17"

[dev-dependencies]
tokio-async-await = "0.1.7"
tokio-current-thread = "0.1.6"
