[package]
name = "loqui_client"
version = "0.0.1"
authors = ["Discord Inc."]
edition = "2018"

[dependencies]
loqui_protocol = { path = "../loqui_protocol" }
loqui_connection = { path = "../loqui_connection" }
failure = "0.1"
log = "0.4"
futures = "0.3"
futures-timer = "2.0"
tokio = { version = "0.2", features = ["rt-core", "tcp"] }
tokio-util = { version = "0.2", features = ["codec"]}
bytesize = "1.0.0"

[dev-dependencies]
tokio-async-await = "0.1.7"
tokio-current-thread = "0.1.6"
