[package]
name = "loqui_connection"
version = "0.0.1"
authors = ["Discord Inc."]
edition = "2018"

[dependencies]
failure = "0.1.1"
log = "0.4"
futures = "0.1.29"
loqui_protocol = { path = "../loqui_protocol" }
tokio = { version = "0.1.21"}
tokio-futures = { git = "https://github.com/discordapp/tokio", rev = "0506fb8018d3090ef1417d3db17f22a951c0c530", features = ["async-await-preview"] }
tokio-codec = "0.1"
futures-timer = "0.1"
backoff = "0.1.2"
bytesize = "1.0.0"
