[package]
name = "loqui_connection"
version = "0.0.1"
authors = ["Discord Inc."]
edition = "2018"

[dependencies]
failure = "0.1"
log = "0.4"
loqui_protocol = { path = "../loqui_protocol" }
tokio = { version = "0.2", features = ["rt-core", "tcp"] }
futures = "0.3"
#tokio-futures = { git = "https://github.com/discordapp/tokio", rev = "0506fb8018d3090ef1417d3db17f22a951c0c530", features = ["async-await-preview"] }
tokio-util = { version = "0.2", features = ["codec"]}
futures-timer = "2.0"
backoff = "0.1.2"
bytesize = "1.0.0"
