[package]
name = "loqui_connection"
version = "0.0.1"
authors = ["Discord Inc."]
edition = "2018"

[dependencies]
failure = "0.1"
log = "0.4"
loqui_protocol = { path = "../loqui_protocol" }
tokio = { version = "0.2", features = ["rt-core", "tcp", "time"] }
futures = "0.3"
tokio-util = { version = "0.2", features = ["codec"]}
backoff = "0.1.2"
bytesize = "1.0.0"
