[package]
name = "loqui_server"
version = "0.0.1"
authors = ["Discord Inc."]
edition = "2018"

[dependencies]
failure = "0.1.1"
log = "0.4"
loqui_protocol = { path = "../loqui_protocol" }
loqui_connection = { path = "../loqui_connection" }
tokio = { version = "0.1.21"}
bytesize = "1.0.0"
tokio-codec = "0.1"
