[package]
name = "loqui_server"
version = "0.0.1"
authors = ["Discord Inc."]
edition = "2018"

[dependencies]
failure = "0.1"
futures = "0.3"
log = "0.4"
loqui_protocol = { path = "../loqui_protocol" }
loqui_connection = { path = "../loqui_connection" }
tokio = { version = "0.2", features = ["rt-core", "tcp"] }
bytesize = "1.0.0"
tokio-util = { version = "0.2", features = ["codec"]}
