[package]
name = "loqui_bench_client"
version = "0.0.1"
authors = ["Discord Inc."]
edition = "2018"

[dependencies]
failure = "0.1.1"
loqui_client = { path = "../../loqui_client" }
loqui_bench_common = { path = "../common" }
tokio = { version = "0.1.21"}
tokio-futures = { git = "https://github.com/tokio-rs/tokio", rev = "cb4aea394e6851ae8cc45a68beeaf2c93cc9a0c0", features = ["async-await-preview"] }
bytesize = "1.0.0"
log = "0.4"
