[package]
name = "loqui_bench_client"
version = "0.0.1"
authors = ["Discord Inc."]
edition = "2018"

[dependencies]
failure = "0.1"
loqui_client = { path = "../../loqui_client" }
loqui_bench_common = { path = "../common" }
tokio = { version = "0.2", features = ["rt-core", "macros", "rt-threaded"] }
bytesize = "1.0.0"
log = "0.4"
