[package]
name = "loqui_bench_server"
version = "0.0.1"
authors = ["Discord Inc."]
edition = "2018"

[dependencies]
failure = "0.1.1"
loqui_server = { path = "../../loqui_server" }
tokio = { version = "0.1.21"}
tokio-futures = { git = "https://github.com/tokio-rs/tokio", rev = "cb4aea394e6851ae8cc45a68beeaf2c93cc9a0c0", features = ["async-await-preview"] }
bytesize = "1.0.0"
loqui_bench_common = { path = "../common" }
