[package]
name = "loqui_bench_server"
version = "0.0.1"
authors = ["Discord Inc."]
edition = "2018"

[dependencies]
failure = "0.1"
loqui_server = { path = "../../loqui_server" }
bytesize = "1.0.0"
tokio = { version = "0.2", features = ["rt-core", "macros"] }
loqui_bench_common = { path = "../common" }
