[package]
name = "loqui_examples_echo"
version = "0.0.1"
authors = ["Discord Inc."]
edition = "2018"

[dependencies]
failure = "0.1.1"
loqui_client = { path = "../../loqui_client" }
loqui_server = { path = "../../loqui_server" }
tokio = { version = "0.1.21"}
log = "0.4"
fern = "0.5"
chrono = "0.4"
bytesize = "1.0.0"
futures-timer = "0.1"
