[package]
name = "loqui_examples_echo"
version = "0.0.1"
authors = ["Discord Inc."]
edition = "2018"

[dependencies]
failure = "0.1"
loqui_client = { path = "../../loqui_client" }
loqui_server = { path = "../../loqui_server" }
tokio = { version = "0.2", features = ["rt-core", "macros", "time"] }
log = "0.4"
fern = "0.5"
chrono = "0.4"
bytesize = "1.0.0"
